hotfix 3.5.1: invalid client blocks REST; logging of invalid client req reduced; java gc log